<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:gravity="center"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_1"
            tools:layout_editor_absoluteX="78dp"
            tools:layout_editor_absoluteY="146dp" />

        <Button
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_2"
            tools:layout_editor_absoluteX="78dp"
            tools:layout_editor_absoluteY="264dp"
            android:layout_margin="10dp" />

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_3"
            tools:layout_editor_absoluteX="78dp"
            tools:layout_editor_absoluteY="383dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>